--- a/src/main/resources/templates/mainWindow.html
+++ b/src/main/resources/templates/mainWindow.html
@@ -48,21 +48,21 @@
                     <nav id="tmMainNav" class="tm-main-nav">
                         <ul>
                             <li>
-                                <a href="#intro" id="tmNavLink1" class="scrolly active" data-bg-img="constructive_bg_01.jpg"
+                                <a href="#intro" id="tmNavLink1" class="scrolly active" data-bg-img="mainwinbg.png"
                                    data-page="#tm-section-1">
                                     <i class="fas fa-home tm-nav-fa-icon"></i>
                                     <span>The prison</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#products" id="tmNavLink2" class="scrolly" data-bg-img="constructive_bg_01.jpg"
+                                <a href="#products" id="tmNavLink2" class="scrolly" data-bg-img="mainwinbg.png"
                                    data-page="#tm-section-2" data-page-type="carousel">
                                     <i class="fas fa-map tm-nav-fa-icon"></i>
                                     <span>Employee Management </span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#company" class="scrolly" data-bg-img="constructive_bg_01.jpg"
+                                <a href="#company" class="scrolly" data-bg-img="mainwinbg.png"
                                    data-page="#tm-section-3">
                                     <i class="fas fa-users tm-nav-fa-icon"></i>
                                     <span>Discipline  Management</span>
@@ -70,14 +70,14 @@
                             </li>
 
                             <li>
-                                <a href="#company" class="scrolly" data-bg-img="constructive_bg_01.jpg"
+                                <a href="#company" class="scrolly" data-bg-img="mainwinbg.png"
                                    data-page="#tm-section-4">
                                     <i class="fas fa-users tm-nav-fa-icon"></i>
                                     <span>Leave Management</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="#company" class="scrolly" data-bg-img="constructive_bg_01.jpg"
+                                <a href="#company" class="scrolly" data-bg-img="mainwinbg.png"
                                    data-page="#tm-section-5">
                                     <i class="fas fa-users tm-nav-fa-icon"></i>
                                     <span>Qualification Management</span>
@@ -85,7 +85,7 @@
                             </li>
 
                             <li>
-                                <a href="#company" class="scrolly" data-bg-img="constructive_bg_01.jpg"
+                                <a href="#company" class="scrolly" data-bg-img="mainwinbg.png"
                                    data-page="#tm-section-6">
                                     <i class="fas fa-users tm-nav-fa-icon"></i>
                                     <span>Performance Review </span>
@@ -93,7 +93,7 @@
                             </li>
 
                             <li>
-                                <a href="#contact" class="scrolly" data-bg-img="constructive_bg_01.jpg"
+                                <a href="#contact" class="scrolly" data-bg-img="mainwinbg.png"
                                    data-page="#tm-section-8">
                                     <i class="fas fa-comments tm-nav-fa-icon"></i>
                                     <span>Transfer Management</span>
@@ -101,7 +101,7 @@
                             </li>
 
                             <li>
-                                <a href="#company" class="scrolly" data-bg-img="constructive_bg_01.jpg"
+                                <a href="#company" class="scrolly" data-bg-img="mainwinbg.png"
                                    data-page="#tm-section-7">
                                     <i class="fas fa-users tm-nav-fa-icon"></i>
                                     <span>Analytics and Reporting</span>
@@ -165,7 +165,7 @@
                                 <span><img src="img/userview.png"></span>
                                 <div class="media-body">
                                     <h3>Employee View</h3>
-                                    <a href="employee" class="btn btn-primary"> View Employee</a>
+                                    <a href="/findEmployee" class="btn btn-primary"> View Employee</a>
                                 </div>
                             </div>
                         </div>
@@ -183,7 +183,7 @@
 
                 <section id="tm-section-3" class="tm-section">
                     <div class="row mb-4">
-                        <header class="col-xl-12"><h2 class="tm-text-shadow">Censures Management</h2></header>
+                        <header class="col-xl-12"><h2 class="tm-text-shadow">Censure Management</h2></header>
                     </div>
                     <div class="row">
                         <div class="col-sm-12 col-md-6 col-lg-12 col-xl-6 mb-4">
@@ -191,7 +191,8 @@
                                 <span><img src="img/censures.png"></span>
                                 <div class="media-body">
                                     <h3>Censures</h3>
-                                    <a href="#" class="btn btn-primary">Add Censures</a>
+                                    <a href="/censure/add" class="btn btn-primary">Add Censures</a>
+
                                 </div>
                             </div>
                         </div>
@@ -201,7 +202,7 @@
                                 <span><img src="img/censures.png"></span>
                                 <div class="media-body">
                                     <h3>Censures</h3>
-                                    <a href="#" class="btn btn-primary"> View Censures</a>
+                                    <a href="/censure/add/{id}" class="btn btn-primary"> View Censures</a>
                                 </div>
                             </div>
                         </div>
@@ -289,7 +290,7 @@
                                 <span><img src="img/skilldev.png"></span>
                                 <div class="media-body">
                                     <h3>Qualification</h3>
-                                  <a href="#" class="btn btn-primary"> Add qualification </a>
+                                  <a href="#" class="btn btn-primary"> Add Qualification </a>
                                 </div>
                             </div>
                         </div>
@@ -299,7 +300,7 @@
                                 <span><img src="img/skilldev.png"></span>
                                 <div class="media-body">
                                     <h3>Qualification</h3>
-                                  <a href="#" class="btn btn-primary"> View qualification </a>
+                                  <a href="#" class="btn btn-primary"> View Qualification </a>
                                 </div>
                             </div>
                         </div>
