--- a/src/main/resources/templates/censure/addCensure.html
+++ b/src/main/resources/templates/censure/addCensure.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
-  <title >Thymeleaf Springboot </title >
+  <title >Department Of Prisons </title >
 </head >
 <body >
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
@@ -184,8 +184,9 @@
           <li id="error" data-th-each="err : ${#fields.errors('*')}" data-th-text="${err}" class="error" ></li >
         </ul >
       </div >
+    </div >
     </form >
-  </div >
+
 </div >
 </div>
 <!--footer include-->
