--- a/src/main/resources/templates/censure/addCensure.html
+++ b/src/main/resources/templates/censure/addCensure.html
@@ -131,22 +131,26 @@
                             </span >
         </div >
       </div >
-      <!--Sinhala modal button and modal tamil button-->
-      <div class="form-row text-right" >
-        <div class="col-md-4" >
-          <!--Sinhala modal button -->
-          <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl" ><i
-                class="fas fa-language" ></i > &nbsp;Singlish to Sinhala
-          </button >
+      <!--Sinhala modal button -->
+      <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl" ><i
+              class="fas fa-language" ></i > &nbsp;Singlish to Sinhala
+      </button >
 
-        </div >
+    </div >
+      <div class="col-md-4" >
+        <!-- modal tamil button -->
+        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-xl" ><i
+                class="fas fa-language" ></i > &nbsp;Tamilish to Tamil
+        </button >
+      </div >
+
         <div class="col-md-4" >
           <!-- modal tamil button -->
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-xl" ><i
                 class="fas fa-language" ></i > &nbsp;Tamilish to Tamil
           </button >
         </div >
-      </div >
+      s
       <!--Image-->
       <div class="form-row text-right" >
         <div class="form-row " >
