--- a/src/main/resources/templates/employee/findEmployee.html
+++ b/src/main/resources/templates/employee/findEmployee.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head data-th-replace="~{fragments/header :: headerFragment}" >
   <meta charset="UTF-8" >
-  <title >Thymeleaf Springboot </title >
+  <title >Department of Prison </title >
 </head >
 <body >
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}" ></nav >
@@ -21,7 +21,7 @@
 </div >
 
 <!--Employee find-->
-<div class="container-fluid bg-dark " id="employeeFindForm" >
+
   <div class="col-sm-12 flex-column " >
     <form id="form" method="POST" data-th-action="${'/employee/findAll'}" data-th-object="${employee}"
           enctype="multipart/form-data" >
@@ -69,60 +69,60 @@
           </div >
         </div >
       </div >
+      <div class="container-fluid  text-center" >
+        <div class="col" >
+          <div class="col" id="employeeListPresent" data-th-if="${not #lists.isEmpty(employees)}" >
+            <table class="table table-hover table-striped" id="myTable" >
+              <thead >
+              <tr >
+                <th > Index</th >
+                <th > WOP Number</th >
+                <th > Calling Name</th >
+                <th > Status</th >
+                <th > Modify</th >
+              </tr >
+              </thead >
+              <tbody >
+              <tr data-th-each="employee, rowCount : ${employees}" >
+                <th data-th-text="${rowCount.count}" ></th >
+                <th data-th-text="${employee.wopNumber}">          </th >
+                <th data-th-text="${employee.callingName}" ></th >
+                <th data-th-text="${employee.employeeStatus.employeeStatus}" ></th >
+                <th >
+                  <a data-th-href="${'/employee/' + employee.id}" class="btn btn-success btn-sm" >&nbsp;View</a >
+
+                  <a data-th-href="${'/employee/edit/' + employee.id}" class="btn btn-success btn-sm" ><i
+                          class="fa fa-edit" ></i >&nbsp;Edit</a >
+
+                  <a data-th-href="${'/qualification/add/' + employee.id}" class="btn btn-success btn-sm" ><i
+                          class="fa fa-edit" ></i >&nbsp;Add Qualification</a >
+
+                  <a data-th-href="${'/employeeLeave/add/' + employee.id}" class="btn btn-success btn-sm" ><i
+                          class="fa fa-edit" ></i >&nbsp;Add Leave</a >
+
+                  <a data-th-href="${'/employeeInstitute/add/' + employee.id}" class="btn btn-success btn-sm" ><i
+                          class="fa fa-edit" ></i >&nbsp;Transfer</a >
+
+                  <a data-th-href="${'/censure/add/' + employee.id}" class="btn btn-success btn-sm" ><i
+                          class="fa fa-edit" ></i >&nbsp;Censure</a >
+
+                  <a data-th-href="${'/commendation/add/' + employee.id}" class="btn btn-success btn-sm" ><i
+                          class="fa fa-edit" ></i >&nbsp;Commendation</a >
+
+                  <a data-th-href="${'/employee/remove/' + employee.id}"
+                     data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-danger btn-sm" ><i
+                          class="fa fa-trash" ></i >
+                    Delete</a >
+                </th >
+              </tr >
+              </tbody >
+            </table >
+          </div >
+        </div >
+      </div >
     </form >
   </div >
-</div >
-<div class="container-fluid  text-center" >
-  <div class="col" >
-    <div class="col" id="employeeListPresent" data-th-if="${not #lists.isEmpty(employees)}" >
-      <table class="table table-hover table-striped" id="myTable" >
-        <thead >
-        <tr >
-          <th > Index</th >
-          <th > WOP Number</th >
-          <th > Calling Name</th >
-          <th > Status</th >
-          <th > Modify</th >
-        </tr >
-        </thead >
-        <tbody >
-        <tr data-th-each="employee, rowCount : ${employees}" >
-          <th data-th-text="${rowCount.count}" ></th >
-          <th data-th-text="${employee.wopNumber}">          </th >
-          <th data-th-text="${employee.callingName}" ></th >
-          <th data-th-text="${employee.employeeStatus.employeeStatus}" ></th >
-          <th >
-            <a data-th-href="${'/employee/' + employee.id}" class="btn btn-success btn-sm" >&nbsp;View</a >
 
-            <a data-th-href="${'/employee/edit/' + employee.id}" class="btn btn-success btn-sm" ><i
-                  class="fa fa-edit" ></i >&nbsp;Edit</a >
-
-            <a data-th-href="${'/qualification/add/' + employee.id}" class="btn btn-success btn-sm" ><i
-                  class="fa fa-edit" ></i >&nbsp;Add Qualification</a >
-
-            <a data-th-href="${'/employeeLeave/add/' + employee.id}" class="btn btn-success btn-sm" ><i
-                  class="fa fa-edit" ></i >&nbsp;Add Leave</a >
-
-            <a data-th-href="${'/employeeInstitute/add/' + employee.id}" class="btn btn-success btn-sm" ><i
-                  class="fa fa-edit" ></i >&nbsp;Transfer</a >
-
-            <a data-th-href="${'/censure/add/' + employee.id}" class="btn btn-success btn-sm" ><i
-                  class="fa fa-edit" ></i >&nbsp;Censure</a >
-
-            <a data-th-href="${'/commendation/add/' + employee.id}" class="btn btn-success btn-sm" ><i
-                  class="fa fa-edit" ></i >&nbsp;Commendation</a >
-
-            <a data-th-href="${'/employee/remove/' + employee.id}"
-               data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="btn btn-danger btn-sm" ><i
-                  class="fa fa-trash" ></i >
-              Delete</a >
-          </th >
-        </tr >
-        </tbody >
-      </table >
-    </div >
-  </div >
-</div >
 
 <!--Employee not fount message-->
 <div data-th-if="${#lists.isEmpty(employees)}"
