--- a/src/main/resources/static/css/myCss.css
+++ b/src/main/resources/static/css/myCss.css
@@ -260,7 +260,7 @@ input {
     font-max-size: 20px;
     font-min-size: 12px;
     font-weight: bold;
-    color: #FFFFFF;
+    color: #000000;
     text-align: left;
 }
 
