--- a/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
+++ b/src/main/resources/templates/employeeLeave/addEmployeeLeave.html
@@ -25,7 +25,7 @@
     <div class="col" >
       <h4 class="text-info text-center" >
         <strong >
-          <span data-th-text="${addStatus==true?'New Employee Leave':'Update Employee Leave'}" ></span >
+          <h4 data-th-text="${addStatus==true?'New Leave ':'Update Leave'}" ></h4 >
         </strong >
       </h4 >
     </div >
