--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Thymeleaf Springboot </title>
+    <title>Department of Prison </title>
 
     <!--style sheet ekak link karanne mehemai-->
     <link rel="stylesheet" data-th-href="@{/css/style.css}">
