Accordian issue in Employeeinstitute add was fixed

--- a/src/main/resources/templates/censure/addCensure.html
+++ b/src/main/resources/templates/censure/addCensure.html
@@ -131,26 +131,24 @@
                             </span >
         </div >
       </div >
-      <!--Sinhala modal button -->
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl" ><i
-              class="fas fa-language" ></i > &nbsp;Singlish to Sinhala
-      </button >
+      <!--Sinhala modal button and modal tamil button-->
+      <div class="form-row text-right" >
+        <div class="col-md-4" >
+          <!--Sinhala modal button -->
+          <button type="button" class="btn btn-primary" data-toggle="modal" data-target=".bd-example-modal-xl" ><i
+                  class="fas fa-language" ></i > &nbsp;Singlish to Sinhala
+          </button >
 
-    </div >
-      <div class="col-md-4" >
-        <!-- modal tamil button -->
-        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-xl" ><i
-                class="fas fa-language" ></i > &nbsp;Tamilish to Tamil
-        </button >
-      </div >
-
+        </div >
         <div class="col-md-4" >
           <!-- modal tamil button -->
           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#bd-example-modal-xl" ><i
-                class="fas fa-language" ></i > &nbsp;Tamilish to Tamil
+                  class="fas fa-language" ></i > &nbsp;Tamilish to Tamil
           </button >
         </div >
-      s
+      </div >
+
+      <div class="form-group col-md-12 col-sm-12 text-left flex-column " >
       <!--Image-->
       <div class="form-row text-right" >
         <div class="form-row " >
@@ -189,6 +187,7 @@
         </ul >
       </div >
     </div >
+    </div>
     </form >
 
 </div >
