--- a/src/main/resources/templates/employeeInstitute/addEmployeeInstitute.html
+++ b/src/main/resources/templates/employeeInstitute/addEmployeeInstitute.html
@@ -25,7 +25,7 @@
     <div class="col" >
       <h4 class="text-info text-center" >
         <strong >
-          <h4 data-th-text="${addStatus==true?'New Qualification':'Update Qualification'}" ></h4 >
+          <h4 data-th-text="${addStatus==true?'Add Transfer':'Update Transfer'}" ></h4 >
         </strong >
       </h4 >
     </div >
